# economic-paper-pipeline

./: .gitattributes  .gitignore  .mcp.json  AGENT_INSTALL.md  CLAUDE.md  INSTALL.md  README.md  SESSION_HANDOVER.md  SKILL.md  install.sh  pipeline.py  pyproject.toml
.claude-plugin/: plugin.json
.config/: current_project.json
.github/workflows/: ci.yml
adapters/: claude_code.md  codex.md  kiro.md
analysis/do-files/: 00_install_pkgs.do  00_setup.do  01_describe.do  03_threshold.do  05_heterogeneity.do
analysis/output/: table1_descriptive.tex  table4_robustness.tex  table4_robustness_full.tex
analysis/references/: 02_output_spec.md
commands/: econ-advance.md  econ-compile.md  econ-conclusion.md  econ-data.md  econ-help.md  econ-list.md  econ-literature.md  econ-new.md  econ-paper.md  econ-reset.md  econ-robustness.md  econ-stata.md  econ-status.md  econ-topic.md  econ-use.md
data/scripts/: 02_clean_and_export.py
docs/: DEVELOPMENT_PLAN.md  REFACTORING_PLAN.md  SESSION_HANDOVER.md  SKILL_ARCHITECTURE.md  SKILL_GUIDE.md  UPGRADE_PLAN_V6.md
hooks/: hooks.json
install/: __init__.py  bootstrap.py  requirements-standard.txt
literature/: literature_review.md  references.bib
paper/: erjref.bib  main.tex
paper/sections/: 01_introduction.tex  02_literature.tex  03_model.tex  04_empirical_results.tex  06_conclusion.tex
paper/tables/: table1_descriptive.tex  table4_robustness.tex  table4_robustness_full.tex  table5_heterogeneity.tex
papers/demo-paper/: conversation.json  pipeline_state.json
papers/digital-supply-chain/: project_config.json
scripts/: __init__.py  agent_caps.py  announce-plugin-loaded.sh  citation_verify.py  memory.py  orchestrator.py  paper_state.py  pipeline.py  skill_guide.py  workflow.py
scripts/backends/: __init__.py  python_analysis.py  (+2 more)
templates/: README.md
tests/: run_tests.py  test_bootstrap.py  test_citation_verify.py  test_core_runtime.py  test_empirical_decouple.py  test_golden_path.py  test_paper_state.py  test_readme_examples.py  test_skill_guide.py  test_workflow.py
topics/: 00_research_proposal.md  02_gap_analysis.md  03_research_question.md
(+131 files in other folders)
